src/Services/taskServices/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: erp-microservices
  labels:
    app.kubernetes.io/part-of: erp-system
